crates/koruma-derive/src/tests/snapshots/koruma_derive__expand__snapshot_tests__koruma_expansion_each_multiple_validators.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
/// Enum of all possible element validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum OrderValuesElementKorumaValidator {
    RangeValidation(RangeValidation),
    EvenValidation(EvenValidation),
}
/// Per-element validation error struct.
#[derive(Clone, Debug)]
pub struct OrderValuesElementKorumaValidationError {
    range_validation: Option<RangeValidation>,
    even_validation: Option<EvenValidation>,
}
impl OrderValuesElementKorumaValidationError {
    pub fn range_validation(&self) -> Option<&RangeValidation> {
        self.range_validation.as_ref()
    }
    pub fn even_validation(&self) -> Option<&EvenValidation> {
        self.even_validation.as_ref()
    }
    /// Returns all failed element validators.
    pub fn all(&self) -> Vec<OrderValuesElementKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.range_validation {
            result.push(OrderValuesElementKorumaValidator::RangeValidation(v.clone()));
        }
        if let Some(v) = &self.even_validation {
            result.push(OrderValuesElementKorumaValidator::EvenValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none() && self.even_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[derive(Clone, Debug)]
pub struct OrderValuesKorumaValidationError {
    element_errors: Vec<(usize, OrderValuesElementKorumaValidationError)>,
}
impl OrderValuesKorumaValidationError {
    /// Returns all element validation errors with their indices.
    pub fn element_errors(&self) -> &[(usize, OrderValuesElementKorumaValidationError)] {
        &self.element_errors
    }
    pub fn is_empty(&self) -> bool {
        self.element_errors.is_empty()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct OrderKorumaValidationError {
    values: OrderValuesKorumaValidationError,
}
impl OrderKorumaValidationError {
    pub fn values(&self) -> &OrderValuesKorumaValidationError {
        &self.values
    }
}
impl koruma::ValidationError for OrderKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.values.is_empty()
    }
}
impl Order {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), OrderKorumaValidationError> {
        let mut error = OrderKorumaValidationError {
            values: OrderValuesKorumaValidationError {
                element_errors: Vec::new(),
            },
        };
        let mut has_error = false;
        for (idx, __item_value) in self.values.iter().enumerate() {
            let mut element_error = OrderValuesElementKorumaValidationError {
                range_validation: None,
                even_validation: None,
            };
            let mut element_has_error = false;
            let validator = RangeValidation::builder()
                .min(0)
                .max(100)
                .with_value(__item_value.clone())
                .build();
            if !validator.validate(__item_value) {
                element_error.range_validation = Some(validator);
                element_has_error = true;
            }
            let validator = EvenValidation::builder()
                .with_value(__item_value.clone())
                .build();
            if !validator.validate(__item_value) {
                element_error.even_validation = Some(validator);
                element_has_error = true;
            }
            if element_has_error {
                error.values.element_errors.push((idx, element_error));
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl koruma::ValidateExt for Order {
    type Error = OrderKorumaValidationError;
    fn validate(&self) -> Result<(), OrderKorumaValidationError> {
        Order::validate(self)
    }
}
