crates/koruma-derive/src/tests/snapshots/koruma_derive__expand__snapshot_tests__koruma_expansion_mixed_fields.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum ComplexItemAgeKorumaValidator {
    RangeValidation(RangeValidation),
}
#[derive(Clone, Debug)]
pub struct ComplexItemAgeKorumaValidationError {
    range_validation: Option<RangeValidation>,
}
impl ComplexItemAgeKorumaValidationError {
    pub fn range_validation(&self) -> Option<&RangeValidation> {
        self.range_validation.as_ref()
    }
    /// Returns all failed field-level validators.
    pub fn all(&self) -> Vec<ComplexItemAgeKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.range_validation {
            result.push(ComplexItemAgeKorumaValidator::RangeValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Enum of all possible element validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum ComplexItemTagsElementKorumaValidator {
    LengthValidation(LengthValidation),
}
/// Per-element validation error struct.
#[derive(Clone, Debug)]
pub struct ComplexItemTagsElementKorumaValidationError {
    length_validation: Option<LengthValidation>,
}
impl ComplexItemTagsElementKorumaValidationError {
    pub fn length_validation(&self) -> Option<&LengthValidation> {
        self.length_validation.as_ref()
    }
    /// Returns all failed element validators.
    pub fn all(&self) -> Vec<ComplexItemTagsElementKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.length_validation {
            result
                .push(
                    ComplexItemTagsElementKorumaValidator::LengthValidation(v.clone()),
                );
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[derive(Clone, Debug)]
pub struct ComplexItemTagsKorumaValidationError {
    element_errors: Vec<(usize, ComplexItemTagsElementKorumaValidationError)>,
}
impl ComplexItemTagsKorumaValidationError {
    /// Returns all element validation errors with their indices.
    pub fn element_errors(
        &self,
    ) -> &[(usize, ComplexItemTagsElementKorumaValidationError)] {
        &self.element_errors
    }
    pub fn is_empty(&self) -> bool {
        self.element_errors.is_empty()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum ComplexItemRatingKorumaValidator {
    RangeValidation(RangeValidation),
    EvenValidation(EvenValidation),
}
#[derive(Clone, Debug)]
pub struct ComplexItemRatingKorumaValidationError {
    range_validation: Option<RangeValidation>,
    even_validation: Option<EvenValidation>,
}
impl ComplexItemRatingKorumaValidationError {
    pub fn range_validation(&self) -> Option<&RangeValidation> {
        self.range_validation.as_ref()
    }
    pub fn even_validation(&self) -> Option<&EvenValidation> {
        self.even_validation.as_ref()
    }
    /// Returns all failed field-level validators.
    pub fn all(&self) -> Vec<ComplexItemRatingKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.range_validation {
            result.push(ComplexItemRatingKorumaValidator::RangeValidation(v.clone()));
        }
        if let Some(v) = &self.even_validation {
            result.push(ComplexItemRatingKorumaValidator::EvenValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none() && self.even_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct ComplexItemKorumaValidationError {
    age: ComplexItemAgeKorumaValidationError,
    tags: ComplexItemTagsKorumaValidationError,
    rating: ComplexItemRatingKorumaValidationError,
}
impl ComplexItemKorumaValidationError {
    pub fn age(&self) -> &ComplexItemAgeKorumaValidationError {
        &self.age
    }
    pub fn tags(&self) -> &ComplexItemTagsKorumaValidationError {
        &self.tags
    }
    pub fn rating(&self) -> &ComplexItemRatingKorumaValidationError {
        &self.rating
    }
}
impl koruma::ValidationError for ComplexItemKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.age.is_empty() && self.tags.is_empty() && self.rating.is_empty()
    }
}
impl ComplexItem {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), ComplexItemKorumaValidationError> {
        let mut error = ComplexItemKorumaValidationError {
            age: ComplexItemAgeKorumaValidationError {
                range_validation: None,
            },
            tags: ComplexItemTagsKorumaValidationError {
                element_errors: Vec::new(),
            },
            rating: ComplexItemRatingKorumaValidationError {
                range_validation: None,
                even_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.age;
        let validator = RangeValidation::builder()
            .min(0)
            .max(100)
            .with_value(__field_value.clone())
            .build();
        if !validator.validate(__field_value) {
            error.age.range_validation = Some(validator);
            has_error = true;
        }
        for (idx, __item_value) in self.tags.iter().enumerate() {
            let mut element_error = ComplexItemTagsElementKorumaValidationError {
                length_validation: None,
            };
            let mut element_has_error = false;
            let validator = LengthValidation::builder()
                .min(1)
                .max(50)
                .with_value(__item_value.clone())
                .build();
            if !validator.validate(__item_value) {
                element_error.length_validation = Some(validator);
                element_has_error = true;
            }
            if element_has_error {
                error.tags.element_errors.push((idx, element_error));
                has_error = true;
            }
        }
        let __field_value = &self.rating;
        let validator = RangeValidation::builder()
            .min(0)
            .max(10)
            .with_value(__field_value.clone())
            .build();
        if !validator.validate(__field_value) {
            error.rating.range_validation = Some(validator);
            has_error = true;
        }
        let validator = EvenValidation::builder()
            .with_value(__field_value.clone())
            .build();
        if !validator.validate(__field_value) {
            error.rating.even_validation = Some(validator);
            has_error = true;
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl koruma::ValidateExt for ComplexItem {
    type Error = ComplexItemKorumaValidationError;
    fn validate(&self) -> Result<(), ComplexItemKorumaValidationError> {
        ComplexItem::validate(self)
    }
}
