crates/koruma-derive/src/tests/snapshots/koruma_derive__expand__snapshot_tests__koruma_expansion_optional_with_generic.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
#[allow(dead_code)]
pub enum ItemScoreKorumaValidator {
    GenericRange(GenericRange<i32>),
}
#[derive(Clone, Debug)]
pub struct ItemScoreKorumaValidationError {
    generic_range: Option<GenericRange<i32>>,
}
impl ItemScoreKorumaValidationError {
    pub fn generic_range(&self) -> Option<&GenericRange<i32>> {
        self.generic_range.as_ref()
    }
    /// Returns all failed field-level validators.
    pub fn all(&self) -> Vec<ItemScoreKorumaValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.generic_range {
            result.push(ItemScoreKorumaValidator::GenericRange(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.generic_range.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct ItemKorumaValidationError {
    score: ItemScoreKorumaValidationError,
}
impl ItemKorumaValidationError {
    pub fn score(&self) -> &ItemScoreKorumaValidationError {
        &self.score
    }
}
impl koruma::ValidationError for ItemKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.score.is_empty()
    }
}
impl Item {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        let mut error = ItemKorumaValidationError {
            score: ItemScoreKorumaValidationError {
                generic_range: None,
            },
        };
        let mut has_error = false;
        if let Some(ref __field_value) = self.score {
            fn __koruma_assert_validate_score_generic_range_field<
                V: koruma::Validate<T>,
                T,
            >(v: &V, t: &T) -> bool {
                v.validate(t)
            }
            let validator = GenericRange::<i32>::builder()
                .min(0)
                .max(100)
                .with_value(__field_value.clone())
                .build();
            if !__koruma_assert_validate_score_generic_range_field(
                &validator,
                __field_value,
            ) {
                error.score.generic_range = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl koruma::ValidateExt for Item {
    type Error = ItemKorumaValidationError;
    fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        Item::validate(self)
    }
}
