crates/koruma-derive/src/tests/snapshots/koruma_derive__expand__snapshot_tests__validator_expansion_generic.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
expression: pretty_print(expanded)
---
#[derive(koruma::bon::Builder)]
#[builder(crate = ::koruma::bon)]
#[derive(Clone, Debug)]
pub struct GenericRangeValidation<T> {
    pub min: T,
    pub max: T,
    pub actual: Option<T>,
}
impl<T, S: generic_range_validation_builder::State> GenericRangeValidationBuilder<T, S>
where
    S::Actual: koruma::bon::IsUnset,
{
    /// Sets the value field. This is auto-generated by `#[koruma::validator]`.
    pub fn with_value(
        self,
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::SetActual<S>,
    > {
        self.actual(value)
    }
}
