crates/koruma-derive/src/tests/snapshots/koruma_derive__expand__snapshot_tests__validator_expansion_non_option_value.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
assertion_line: 128
expression: pretty_print(expanded)
---
#[derive(koruma::bon::Builder)]
#[builder(crate = ::koruma::bon)]
#[derive(Clone, Debug)]
pub struct DirectValueValidation {
    min: i32,
    pub actual: i32,
}
impl<S: direct_value_validation_builder::State> DirectValueValidationBuilder<S>
where
    S::Actual: koruma::bon::IsUnset,
{
    /// Sets the value field. This is auto-generated by `#[koruma::validator]`.
    pub fn with_value(
        self,
        value: i32,
    ) -> DirectValueValidationBuilder<direct_value_validation_builder::SetActual<S>> {
        self.actual(value)
    }
}
