crates/koruma-derive/src/tests/snapshots/koruma_derive__expand__snapshot_tests__validator_expansion_simple.snap
---
source: crates/koruma-derive/src/expand/snapshot_tests.rs
assertion_line: 28
expression: pretty_print(expanded)
---
#[derive(koruma::bon::Builder)]
#[builder(crate = ::koruma::bon)]
#[derive(Clone, Debug)]
pub struct NumberRangeValidation {
    min: i32,
    max: i32,
    pub actual: Option<i32>,
}
impl<S: number_range_validation_builder::State> NumberRangeValidationBuilder<S>
where
    S::Actual: koruma::bon::IsUnset,
{
    /// Sets the value field. This is auto-generated by `#[koruma::validator]`.
    pub fn with_value(
        self,
        value: i32,
    ) -> NumberRangeValidationBuilder<number_range_validation_builder::SetActual<S>> {
        self.actual(value)
    }
}
